...

  @override
  Widget build(BuildContext context) {
    return ModelForm(
      title: widget.name,
      submitButtonLabel: t.save,
      submitButtonKey: const ValueKey('newScheduleSave'),
      isFormValid: _isFormValid,
      saveChanges: _save,
      closeAll: _closeAll,
      fields: <Widget>[
        SchedulingTypePicker(
          value: _type,
...

  List<Widget> _intervalDaysSpecifics() {
    return [
      FormTextField(
        controller: _intervalDaysController,
        label: t.every,
        fieldKey: const ValueKey('newScheduleEvery'),
        suffixText: t.days,
        errorText: _intervalDaysError,
        onChanged: _refresh,
        inputType: TextInputType.number,
        regexFormatter: RegexPatterns.intNumber,
      ),
...
  List<Widget> _dailySpecifics() {
    return [
      TimeListCard(
        times: _intakeOrNotificationTimes,
        rowIcon: widget.administrationRoute.icon,
        addLabel: t.addIntakeTime,
        addTileKey: const ValueKey('addNotificationTile'),
        onAdd: _addTime,
        onEdit: _editTime,
        onDelete: _deleteTime,
        trailingChildren: [
          SwitchTile(
            title: t.enableNotifications,
...

  List<Widget> _monthlySpecifics() {
    return [
      FormTextField(
        controller: _monthlyDayController,
        label: t.dayOfMonth,
        fieldKey: const ValueKey('newScheduleDayOfMonth'),
        errorText: _monthlyDayError,
        onChanged: _refresh,
        inputType: TextInputType.number,
        regexFormatter: RegexPatterns.intNumber,
      ),
      FormSpacer(),
      FormTextField(
        controller: _monthlyIntervalController,
        label: t.every,
        fieldKey: const ValueKey('newScheduleEveryMonths'),
        suffixText: t.months,
        errorText: _monthlyIntervalError,
        onChanged: _refresh,
        inputType: TextInputType.number,
        regexFormatter: RegexPatterns.intNumber,
      ),
...
